[package]
name = "sp_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "sp_client"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
silentpayments = { git = "https://github.com/cygnet3/rust-silentpayments", branch = "secp-struct-member" }
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bitcoin = { version = "0.31.1", features = ["serde", "rand", "base64"] }
rayon = "1.10.0"
