[package]
name = "sp_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "sp_client"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
silentpayments = "0.4"
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bitcoin = { version = "0.31.1", features = ["serde", "rand", "base64"] }
rayon = "1.10.0"
futures = "0.3"
log = "0.4"
async-trait = "0.1"
reqwest = { version = "0.12.4", features = ["rustls-tls", "gzip", "json"], default-features = false, optional = true }
hex = { version = "0.4.3", features = ["serde"], optional = true }
bdk_coin_select = "0.4.0"

[features]
blindbit-backend = ["reqwest", "hex"]
